envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            {
                              cluster: service_cluster,
                              timeout: { seconds: 5 },
                            }
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: service_cluster
      connect_timeout: 0.25s
      type: LOGICAL_DNS # or STRICT_DNS  
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: "127.0.0.1" # Replace <IP_ADDRESS> with the IP address of your host machine
                      port_value: 3000
